Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11376

We should not issue rollback when start_seqno == snap_start_seqno and snap_end_seqno > upper

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • No

    Description

      For the case where start_seqno == snap_start_seqno and snap_end_seqno > upper
      we issue a rollback to the client to rollback to snap_start_seqno. Rollback should not be issued since start_seqno is already equal to snap_start_seqno.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty