MB-11376: Don't rollback if snap_start == start == upper

We shouldn't tell a client to rollback to the same seqno that it
request.

Change-Id: If6c9bd438e2a70f637ff8bcb28bc46258d28b10c
Reviewed-on: http://review.couchbase.org/38344
Reviewed-by: abhinav dangeti <abhinav@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>